Fixed hyphenated word on the selling title on the home page. Hyphenated the word 'photography' on all mobile devices and didnt look good. changed max width to 319px so the page is still viewable on narrow screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ to fix an error on iOS devices. I have modified it slightly but do not claim thi
 }
 
 
-@media (max-width: 576px) { 
+@media (max-width: 319px) { 
     .selling-title {
         hyphens: manual;
     }
